third_party/move/move-compiler-v2/tests/unit_test/test/parametric_multiple_tests_same_bracket.exp

Diagnostics:
error: invalid parametric test row
  ┌─ tests/unit_test/test/parametric_multiple_tests_same_bracket.move:5:9
  │
4 │     #[test(addr = @0x1), test(addr = @0x2)]
  │       ----------------- A row bracket must contain exactly one #[test]
5 │     fun multiple_tests_same_bracket(addr: signer) {
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
